[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/flask_cloudflare/__init__.py"

[project]
name = "flask_cloudflare"
dynamic = [
  "version"
]
authors = [
        { name="Anders Norrbom", email="anders@norrbom.org" },
]
description = ""
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    'cachetools',
    'PyJWT',
    'requests'
]

[tool.hatch.envs.test]
dependencies = [
    "pytest",
    "python-dotenv",
    "flake8",
    "black",
    "isort",
]
