[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/flask_cloudflare_login/__init__.py"

[project]
name = "flask_cloudflare_login"
dynamic = [
  "version"
]
authors = [
        { name="Anders Norrbom", email="anders@norrbom.org" },
]
description = ""
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    'cachetools==5.3.0',
    'PyJWT==2.6.0',
    'requests==2.28.2'
]
[tool.hatch.envs.test]
dependencies = [
    "pytest",
    "python-dotenv",
    "flake8",
    "black",
    "isort",
]
