[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/flask_cloudflare_login/__init__.py"

[project.urls]
Homepage = "https://github.com/norrbom/flask_cloudflare_login"

[project]
name = "flask_cloudflare_login"
dynamic = [
  "version"
]
authors = [
        { name="Anders Norrbom", email="anders@norrbom.org" },
]
license = "MIT"
license_files = "LICENSE"
description = "The Flask Cloudflare Login module provides a Flask-Login user class from Cloudfare Access JWT token and Cloudflare identity API"
long_description = "The Flask Cloudflare Login module provides a Flask-Login user class from Cloudfare Access JWT token and Cloudflare identity API"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    'cachetools>=5.3.0',
    'PyJWT>=2.6.0',
    'requests>=2.28.2'
]
[tool.hatch.envs.test]
dependencies = [
    "pytest",
    "python-dotenv",
    "flake8",
    "black",
    "isort",
]
